# semantic-atlas-demo

./: .env.example  .gitignore  LICENSE  README.md  package.json
data/: ideas.json
renderer/: pyproject.toml
renderer/src/semantic_atlas_demo_renderer/: __init__.py  ideas.py  interpolation.py  jobs.py  main.py  schemas.py
renderer/src/semantic_atlas_demo_renderer/renderers/: base.py  factory.py  flux2_klein.py  mock.py  sdxl_mps.py
renderer/tests/: __init__.py  test_core_api.py  test_flux2_klein_adapter.py  test_interpolation.py  test_renderer_factory.py
web/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/grid/: route.test.ts  route.ts
web/app/api/grid/[jobId]/events/: route.test.ts  route.ts
web/app/api/ideas/: route.ts
web/app/api/render-coordinate/: route.test.ts  route.ts
web/app/atlas/[ideaId]/: page.test.tsx  page.tsx
web/components/: IdeaPicker.tsx  LiveGrid.tsx
web/lib/: ideas.ts  renderer.test.ts  renderer.ts  route-helpers.ts  types.ts
