[project]
name = "semantic-atlas-demo-renderer"
version = "0.1.0"
description = "Renderer service for the Semantic Atlas demo"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi>=0.115.0,<1",
  "pillow>=10.4.0,<13",
  "pydantic>=2.8.0,<3",
  "uvicorn[standard]>=0.32.0,<1",
]

[project.scripts]
semantic-atlas-demo-renderer = "semantic_atlas_demo_renderer.main:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9",
  "ruff>=0.6.8,<1",
]
local-models = [
  "accelerate>=1.0.0,<2",
  "einops>=0.8.1,<1",
  "diffusers>=0.35.0",
  "flux @ git+https://github.com/black-forest-labs/flux2.git@50fe5162777813d869182b139e83b10743caef15",
  "safetensors>=0.4.5",
  "torch>=2.8.0",
  "transformers>=4.56.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "semantic_atlas_demo_renderer"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
